<?xml version="1.0" encoding="utf-8"?>
<!--
strings.xml
Jesse Jurden, Mike Richards
February 9, 2015

Contains all the string constants used in the app.
-->
<resources>

    <string name="app_name">CalcJurden_Richards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_clear">CLEAR</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_.">.</string>
    <string name="btn_equals">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_times">*</string>
    <string name="btn_divide">/</string>
    <string name="goose_toast_multiple_dots">Silly goose! You cannot type two or more dots!</string>
    <string name="goose_toast_divide_by_zero">Silly goose!  You cannot divide by zero!</string>

</resources>
