<!--
 activity_calc.xml
 Jesse Jurden, Mike Richards
 February 9, 2015

 This is the main layout of the calculator app.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CalcActivity">

    <TextView
        android:id="@+id/txtResult"
        android:text="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#cccccc"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TableLayout
        android:id="@+id/tblNumbers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtResult">

        <TableRow>
            <Button
                android:id="@+id/btnClear"
                android:text="@string/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btn1"
                android:text="@string/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn2"
                android:text="@string/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn3"
                android:text="@string/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDivide"
                android:text="@string/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn4"
                android:text="@string/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn5"
                android:text="@string/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn6"
                android:text="@string/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnTimes"
                android:text="@string/btn_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn7"
                android:text="@string/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn8"
                android:text="@string/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn9"
                android:text="@string/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnMinus"
                android:text="@string/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnDot"
                android:text="@string/btn_."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn0"
                android:text="@string/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnEquals"
                android:text="@string/btn_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnPlus"
                android:text="@string/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
